# agentic-rag

./: .gitignore  README.md  ingestion.py  main.py  pyproject.toml
.chroma/: chroma.sqlite3
graph/: graph.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/chains/tests/: test_chains.py
graph/nodes/: grade_gocuments.py  web_search.py
